# SilentStudio

./: LICENSE  README.md  pyproject.toml  setup.py
index/: index.jsonl
src/silentstudio/: __init__.py  __main__.py  cli.py  config.py  installer.py  list_packages.py  project_new.py  utils.py  window.py
src/silentstudio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/silentstudio/lang/: en-US.lang  ja-JP.lang  ru-RU.lang  zh-CN.lang
