[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silentstudio"
version = "0.1.5"
description = "SilentStudio CLI - 让开发者体验更好一点"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "SilentStudio", email = "SilentStudio@Home.email.cn"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "colorama>=0.4.0",
]

[project.optional-dependencies]
window = ["PySide6>=6.4.0"]

[project.scripts]
silentstudio = "silentstudio.cli:main"
ssc = "silentstudio.cli:main"
sscli = "silentstudio.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}